--- a/Intro into Objects and Classes.html
+++ b/Intro into Objects and Classes.html
@@ -54,9 +54,9 @@ const device = {
 
 }
 
-const product = document.querySelector('#product').innerHTML = device.product();
-const company = document.querySelector('#company').innerHTML = device.developer();
-const storage = document.querySelector('#storage').innerHTML = device.memory[0];
+const product = document.getElementById('product').innerHTML = device.product();
+const company = document.getElementById('company').innerHTML = device.developer();
+const storage = document.getElementById("storage").innerHTML = device.memory[0];
 
 
 
